@@ -1,2 +1,3 @@
 Remove Weibull alias
 Remove WeibullMuSigma alias
+Remove WeibullFactory alias, +buildAsWeibull deprecated methods
