@@ -142,7 +142,7 @@ ot_add_source_file (UserDefined.cxx)
 ot_add_source_file (UserDefinedFactory.cxx)
 ot_add_source_file (VonMises.cxx)
 ot_add_source_file (WeibullMin.cxx)
-ot_add_source_file (WeibullFactory.cxx)
+ot_add_source_file (WeibullMinFactory.cxx)
 ot_add_source_file (WeibullMinMuSigma.cxx)
 ot_add_source_file (Wishart.cxx)
 ot_add_source_file (ZipfMandelbrot.cxx)
@@ -285,7 +285,7 @@ ot_install_header_file (Uniform.hxx)
 ot_install_header_file (UserDefinedFactory.hxx)
 ot_install_header_file (UserDefined.hxx)
 ot_install_header_file (VonMises.hxx)
-ot_install_header_file (WeibullFactory.hxx)
+ot_install_header_file (WeibullMinFactory.hxx)
 ot_install_header_file (WeibullMin.hxx)
 ot_install_header_file (WeibullMinMuSigma.hxx)
 ot_install_header_file (Wishart.hxx)
