@@ -159,7 +159,7 @@
 #include "openturns/UserDefinedFactory.hxx"
 #include "openturns/VonMises.hxx"
 #include "openturns/WeibullMin.hxx"
-#include "openturns/WeibullFactory.hxx"
+#include "openturns/WeibullMinFactory.hxx"
 #include "openturns/WeibullMinMuSigma.hxx"
 #include "openturns/Wishart.hxx"
 #include "openturns/ZipfMandelbrot.hxx"
