@@ -481,7 +481,7 @@ ot_check_test (UserDefined_std)
 ot_check_test (UserDefinedFactory_std)
 ot_check_test (VonMises_std)
 ot_check_test (WeibullMin_std)
-ot_check_test (WeibullFactory_std)
+ot_check_test (WeibullMinFactory_std)
 ot_check_test (Wishart_std)
 ot_check_test (ZipfMandelbrot_std)
 ot_check_test (IndependentCopula_std)
