@@ -142,7 +142,7 @@ Generate a random sample from a Normal distribution:
 
 Draw a QQ-plot against a given (inferred) distribution:
 
->>> tested_distribution = ot.WeibullFactory().build(sample)
+>>> tested_distribution = ot.WeibullMinFactory().build(sample)
 >>> QQ_plot = ot.VisualTest.DrawQQplot(sample, tested_distribution)
 >>> View(QQ_plot).show()
 
@@ -215,7 +215,7 @@ Generate a random sample from a Normal distribution:
 
 Draw a CDF-plot against a given (inferred) distribution:
 
->>> tested_distribution = ot.WeibullFactory().build(sample)
+>>> tested_distribution = ot.WeibullMinFactory().build(sample)
 >>> CDF_plot = ot.VisualTest.DrawCDFplot(sample, tested_distribution)
 >>> View(CDF_plot).show()
 
