@@ -515,7 +515,7 @@ ot_pyinstallcheck_test (UserDefined_std)
 ot_pyinstallcheck_test (UserDefinedFactory_std)
 ot_pyinstallcheck_test (VonMises_std)
 ot_pyinstallcheck_test (WeibullMin_std)
-ot_pyinstallcheck_test (WeibullFactory_std)
+ot_pyinstallcheck_test (WeibullMinFactory_std)
 ot_pyinstallcheck_test (Wishart_std)
 ot_pyinstallcheck_test (ZipfMandelbrot_std)
 ot_pyinstallcheck_test (DistributionParameters_std)
